feat: added check & verify routes for seller
